--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<script type="importmap">
 		{
 			"imports": {
-				"three": "./three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.157.0/examples/jsm/"
+			    "three": "https://cdn.jsdelivr.net/npm/three@0.170.0/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.170.0/examples/jsm/"
 			}
 		}
 	</script>
